@@ -7,19 +7,20 @@ import javax.crypto.spec.SecretKeySpec;
 import java.util.*;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import javax.xml.bind.DatatypeConverter;
-import org.apache.commons.text.StringEscapeUtils;
 
 /**
  * @author Todd Burry <todd@vanillaforums.com>
- * @version 2.0 This object contains the client code for Vanilla jsConnect
- * single-sign-on.
+ * @version 2.0 This object contains the client code for Vanilla jsConnect single-sign-on.
  */
 public class jsConnect {
 
     static final String VERSION = "2";
     static final int TIMEOUT = 24 * 60;
-    static final String HASH_ALGORITHM = "MD5";
+    static long Now = 0;
+
+    public static final String HASH_MD5 = "md5";
+    public static final String HASH_SHA1 = "sha1";
+    public static final String HASH_SHA256 = "sha256";
 
     /**
      * Convenience method that returns a map representing an error.
@@ -28,14 +29,13 @@ public class jsConnect {
      * @param message A user-readable message for the error.
      * @return
      */
-    protected static Map Error(String code, String message) {
-        Map result = new HashMap();
+    private static Map<String, String> Error(String code, String message) {
+        Map<String, String> result = new HashMap<>();
         result.put("error", code);
         result.put("message", message);
 
         return result;
     }
-
     /**
      * Returns a JSONP formatted string suitable to be consumed by jsConnect.
      * This is usually the only method you need to call in order to implement
@@ -54,16 +54,74 @@ public class jsConnect {
      * leave this false for testing, but you should make it true in production.
      * @return The JSONP formatted string representing the current user.
      */
+    @Deprecated
     public static String GetJsConnectString(Map user, Map request, String clientID, String secret, Boolean secure) {
+        return GetJsConnectString(user, request, clientID, secret, HASH_MD5, secure);
+    }
+
+    /**
+     * Returns a JSONP formatted string suitable to be consumed by jsConnect.
+     * This is usually the only method you need to call in order to implement
+     * jsConnect.
+     *
+     * @param user A map containing the user information. The map should have
+     * the following keys: - uniqueid: An ID that uniquely identifies the user
+     * in your system. This value should never change for a given user.
+     * @param request: A map containing the query string for the current
+     * request. You usually just pass in request.getParameterMap().
+     * @param clientID: The client ID for your site. This is usually configured
+     * on Vanilla's jsConnect configuration page.
+     * @param secret: The secret for your site. This is usually configured on
+     * Vanilla's jsConnect configuration page.
+     * @param hashType The hash algorithm to use.
+     * @return The JSONP formatted string representing the current user.
+     */
+    public static String GetJsConnectString(Map user, Map request, String clientID, String secret, String hashType) {
+        return GetJsConnectString(user, request, clientID, secret, hashType, true);
+    }
+
+    /**
+     * This is a test version of `GetJsConnectString()` that doesn't check the request.
+     */
+    public static String GetTestJsConnectString(Map user, Map request, String clientID, String secret, String hashType) {
+        return GetJsConnectString(user, request, clientID, secret, hashType, false);
+    }
+
+    /**
+     * Returns a JSONP formatted string suitable to be consumed by jsConnect.
+     * This is usually the only method you need to call in order to implement
+     * jsConnect.
+     *
+     * @param user A map containing the user information. The map should have
+     * the following keys: - uniqueid: An ID that uniquely identifies the user
+     * in your system. This value should never change for a given user.
+     * @param request: A map containing the query string for the current
+     * request. You usually just pass in request.getParameterMap().
+     * @param clientID: The client ID for your site. This is usually configured
+     * on Vanilla's jsConnect configuration page.
+     * @param secret: The secret for your site. This is usually configured on
+     * Vanilla's jsConnect configuration page.
+     * @param hashType The hash algorithm to use.
+     * @param secure: Whether or not to check security on the request. You can
+     * leave this false for testing, but you should make it true in production.
+     * @return The JSONP formatted string representing the current user.
+     */
+    private static String GetJsConnectString(Map user, Map request, String clientID, String secret, String hashType, Boolean secure) {
         Map error = null;
 
-        long timestamp = 0;
+        long timestamp;
         try {
             timestamp = Long.parseLong(Val(request, "timestamp"));
         } catch (Exception ex) {
             timestamp = 0;
         }
         long currentTimestamp = jsConnect.Timestamp();
+
+        if (request.containsKey("callback") &&
+            !request.get("callback").toString().matches("^[$a-zA-Z_][0-9a-zA-Z_$]*$")
+        ) {
+            return "console.error('Invalid callback parameter in jsConnect.')";
+        }
 
         if (secure) {
             if (Val(request, "v") == null) {
@@ -75,18 +133,19 @@ public class jsConnect {
             } else if (!Val(request, "client_id").equals(clientID)) {
                 error = jsConnect.Error("invalid_client", "Unknown client " + Val(request, "client_id") + ".");
             } else if (Val(request, "timestamp") == null && Val(request, "sig") == null) {
-                error = new HashMap();
+                error = new HashMap<String, Object>();
                 if (user != null && !user.isEmpty()) {
                     error.put("name", user.containsKey("name") ? user.get("name") : "");
                     error.put("photourl", user.containsKey("photourl") ? user.get("photourl") : "");
+                    error.put("signedin", true);
                 } else {
                     error.put("name", "");
                     error.put("photourl", "");
                 }
             } else if (timestamp == 0) {
-                error = jsConnect.Error("invalid_request", "The timestamp is missing or invalid.");
+                error = jsConnect.Error("invalid_request", "The timestamp parameter is missing or invalid.");
             } else if (Val(request, "sig") == null) {
-                error = jsConnect.Error("invalid_request", "Missing the sig paremeter.");
+                error = jsConnect.Error("invalid_request", "Missing the sig parameter.");
             } else if (Math.abs(currentTimestamp - timestamp) > TIMEOUT) {
                 error = jsConnect.Error("invalid_request", "The timestamp is invalid.");
             } else if (Val(request, "nonce") == null) {
@@ -95,7 +154,7 @@ public class jsConnect {
                 error = jsConnect.Error("invalid_request", "Missing the ip parameter.");
             } else {
                 // Make sure the signature checks out.
-                String sig = jsConnect.hash(Val(request, "ip") + Val(request, "nonce") + Long.toString(timestamp) + secret);
+                String sig = jsConnect.hash(Val(request, "ip") + Val(request, "nonce") + Long.toString(timestamp) + secret, hashType);
                 if (!sig.equals(Val(request, "sig"))) {
                     error = jsConnect.Error("access_denied", "Signature invalid.");
                 }
@@ -110,16 +169,17 @@ public class jsConnect {
             user.put("ip", Val(request, "ip"));
             user.put("nonce", Val(request, "nonce"));
             result = new LinkedHashMap(user);
-            SignJsConnect(result, clientID, secret, true);
+            String signature = SignJsConnect(result, clientID, secret, hashType);
+            result.put("client_id", clientID);
+            result.put("sig", signature);
             result.put("v", VERSION);
         } else {
-            result = new LinkedHashMap();
+            result = new LinkedHashMap<String, String>();
             result.put("name", "");
             result.put("photourl", "");
         }
 
         String json = jsConnect.JsonEncode(result);
-        request.callback =  StringEscapeUtils.escapeHtml(request.callback);
         if (Val(request, "callback") == null) {
             return json;
         } else {
@@ -135,37 +195,60 @@ public class jsConnect {
      */
     public static String JsonEncode(Map data) {
         StringBuilder result = new StringBuilder();
-        Iterator iterator = data.entrySet().iterator();
 
-        while (iterator.hasNext()) {
+        for (Object o : data.entrySet()) {
             if (result.length() > 0) {
-                result.append(", ");
+                result.append(",");
             }
 
-            Map.Entry v = (Map.Entry) iterator.next();
+            Map.Entry v = (Map.Entry) o;
 
             String key = v.getKey().toString();
             key = key.replace("\"", "\\\"");
 
-            String value = v.getValue().toString();
-            value = value.replace("\"", "\\\"");
+            String value;
             String q = "\"";
 
-            result.append(q + key + q + ": " + q + value + q);
+            if (v.getValue() == Boolean.TRUE) {
+                value = "true";
+            } else if (v.getValue() == Boolean.FALSE) {
+                value = "false";
+            } else {
+                value = v.getValue().toString();
+                value = q + value.replace("\"", "\\\"") + q;
+            }
+
+            result.append(q + key + q + ":" + value);
         }
 
-        return "{ " + result.toString() + " }";
+        return "{" + result.toString() + "}";
     }
 
     /**
      * Compute the hash of a string.
      *
      * @param password The data to compute the hash on.
+     * @param hashType The hash algorithm to use.
      * @return A hex encoded string representing the hash of the string.
      */
-    public static String hash(String password) {
+    public static String hash(String password, String hashType) {
+        String alg;
         try {
-            java.security.MessageDigest digest = java.security.MessageDigest.getInstance(HASH_ALGORITHM);
+            switch (hashType) {
+                case HASH_MD5:
+                    alg = "MD5";
+                    break;
+                case HASH_SHA1:
+                    alg = "SHA-1";
+                    break;
+                case HASH_SHA256:
+                    alg = "SHA-256";
+                    break;
+                default:
+                    return "UNSUPPORTED HASH ALGORITHM";
+            }
+
+            java.security.MessageDigest digest = java.security.MessageDigest.getInstance(alg);
             digest.update(password.getBytes("UTF-8"));
             byte[] hash = digest.digest();
             return hexEncode(hash);
@@ -174,7 +257,23 @@ public class jsConnect {
         }
     }
 
-    public static String hexEncode(byte[] hash) {
+    /**
+     * Backwards compatible version of `hash()`.
+     *
+     * @param password The data to compute the hash on.
+     * @return A hex encoded string representing the hash of the string.
+     */
+    @Deprecated
+    public static String hash(String password) {
+        return hash(password, HASH_MD5);
+    }
+
+    /**
+     * Hex encode a byte array.
+     * @param hash The data to encode.
+     * @return
+     */
+    private static String hexEncode(byte[] hash) {
         StringBuilder ret = new StringBuilder();
         for (int i = 0; i < hash.length; i++) {
             String hex = Integer.toHexString(0xFF & hash[i]);
@@ -196,7 +295,7 @@ public class jsConnect {
      * value.
      * @return The value from the map or the default if it isn't found.
      */
-    protected static String Val(Map request, String key, String defaultValue) {
+    public static String Val(Map request, String key, String defaultValue) {
         try {
             Object result = null;
             if (request.containsKey(key)) {
@@ -220,7 +319,7 @@ public class jsConnect {
      * @param key The key of the value.
      * @return The value from the map or the null if it isn't found.
      */
-    protected static String Val(Map request, String key) {
+    public static String Val(Map request, String key) {
         return Val(request, key, null);
     }
 
@@ -233,11 +332,10 @@ public class jsConnect {
      * Vanilla's jsConnect configuration page.
      * @param secret The secret of the site. This is usually configured on
      * Vanilla's jsConnect configuration page.
-     * @param setData Whether or not to add the signature information to the
-     * data.
+     * @param hashType The hash algorithm to use.
      * @return The computed signature of the data.
      */
-    public static String SignJsConnect(Map data, String clientID, String secret, Boolean setData) {
+    public static String SignJsConnect(Map data, String clientID, String secret, String hashType) {
         // Generate a sorted list of the keys.
         String[] keys = new String[data.keySet().size()];
         data.keySet().toArray(keys);
@@ -258,19 +356,35 @@ public class jsConnect {
                 sigStr.append("=");
                 sigStr.append(java.net.URLEncoder.encode(value, "UTF-8"));
             } catch (Exception ex) {
-                if (setData) {
-                    data.put("clientid", clientID);
-                    data.put("sig", "ERROR");
-                }
                 return "ERROR";
             }
         }
 
         // MD5 sign the String with the secret.
-        String signature = jsConnect.hash(sigStr.toString() + secret);
+        String signature = jsConnect.hash(sigStr.toString() + secret, hashType);
+
+        return signature;
+    }
+
+    /**
+     * Sign a jsConnect response. Responses are signed so that the site
+     * requesting the response knows that this is a valid site signing in.
+     *
+     * @param data The data to sign.
+     * @param clientID The client ID of the site. This is usually configured on
+     * Vanilla's jsConnect configuration page.
+     * @param secret The secret of the site. This is usually configured on
+     * Vanilla's jsConnect configuration page.
+     * @param setData Whether or not to add the signature information to the
+     * data.
+     * @return The computed signature of the data.
+     */
+    @Deprecated
+    public static String SignJsConnect(Map data, String clientID, String secret, Boolean setData) {
+        String signature = SignJsConnect(data, clientID, secret, HASH_MD5);
 
         if (setData) {
-            data.put("clientid", clientID);
+            data.put("client_id", clientID);
             data.put("sig", signature);
         }
         return signature;
@@ -282,14 +396,13 @@ public class jsConnect {
      * @param user A map containing the user information. The map should have
      * the following keys: - uniqueid: An ID that uniquely identifies the user
      * in your system. This value should never change for a given user.
-     * @param clientID: The client ID for your site. This is usually configured
+     * @param client_id: The client ID for your site. This is usually configured
      * on Vanilla's jsConnect configuration page.
      * @param secret: The secret for your site. This is usually configured on
      * Vanilla's jsConnect configuration page.
      * @return SSO string.
      */
     public static String SSOString(Map user, String client_id, String secret) throws InvalidKeyException {
-
         if (!user.containsKey("client_id")) {
             user.put("client_id", client_id);
         }
@@ -297,7 +410,8 @@ public class jsConnect {
             user.put("client_id", client_id);
         }
 
-        String jsonBase64String = new String(DatatypeConverter.printBase64Binary(JsonEncode(user).getBytes()));
+        String json = JsonEncode(user);
+        String jsonBase64String = Base64.getEncoder().encodeToString(json.getBytes());
         String timestamp = String.valueOf(Timestamp());
 
         // Build the signature string.
@@ -330,14 +444,15 @@ public class jsConnect {
     }
 
     /**
-     * Returns the current timestamp of the server, suitable for synching with
-     * the site.
+     * Returns the current timestamp of the server, suitable for syncing with the site.
      *
      * @return The current timestamp.
      */
     public static long Timestamp() {
-        long result = System.currentTimeMillis() / 1000;
-        return result;
+        if (Now > 0) {
+            return Now;
+        } else {
+            return System.currentTimeMillis() / 1000;
+        }
     }
-
 }
